[package]
name = "puddle-core"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.6.5"
rand_pcg = "0.1.2"

serde = { version = "1", features = ["derive"] }

structopt = "0.2.15"

log = "0.4.6"
env_logger = "0.6.1"

fxhash = "0.2.1"
petgraph = "0.4.13"
pathfinding = "1.1.12"

[dev-dependencies]
serde_yaml = "0.8.9"
glob = "0.3.0"
matches = "0.1.8"
