[package]
name = "puddle-core"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.7"
rand_pcg = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
env_logger = "0.6"

petgraph = "0.4.13"
pathfinding = "1.1.12"

# I need clone-able iterators, so > 1.0.2
indexmap = { git = "https://github.com/bluss/indexmap", rev = "0a06966af88c0f48f2d69d20dacfc89cebfbbf3f" }

[dev-dependencies]
serde_yaml = "0.8.9"
glob = "0.3.0"
matches = "0.1.8"
