[package]
name = "puddle-pi"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"

[dependencies]
puddle-core = { path = "../puddle-core" }
rppal = "0.11.2"
structopt = "0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
signal-hook = "0.1.9"

config = "0.9"
serde = "1"

[build-dependencies]
chrono = "0.4"
