[metadata]
name = puddle
version = 0.1
author = Max Willsey
author-email = me@mwillsey.com
home-page = https://github.com/uwmisl/puddle
description = A programming system for digital microfluidics
license = MIT

[options]
python_requires = >= 3.5
packages = puddle
# test_suite = tests
install_requires =
  requests
  networkx

# tests_require = {tests_require}
