[package]
name = "puddle-core"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
license = "MIT"
edition = "2018"

[features]
# only works with --target armv7-unknown-linux-gnueabihf
pi = ["rppal"]
vision = []

[[bin]]
name = "pi-test"
required-features = ["pi"]

[[bin]]
name = "vision-test"
required-features = ["vision"]

[dependencies]

rand = "0.6"
rand_pcg = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"

structopt = "0.2"
derive_more = "0.14"

log = "^0.4.1"

env_logger = "^0.5.3"

fxhash = "0.2.1" # fast, deterministic hashing

# kuhn-munkres
pathfinding = "0.7"

float-ord = "0.2.0"

nalgebra = "0.15"
ncollide2d = "0.16"

matches = "0.1"
petgraph = "0.4"

rppal = {version = "0.10.0", optional = true}

[dev-dependencies]
glob = "^0.2"
matches = "0.1"

[build-dependencies]
cc = "1.0"
