[package]
name = "puddle-core"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
license = "MIT"
edition = "2018"

[dependencies]
rand = "0.6.5"
rand_pcg = "0.1.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "0.6.1"

structopt = "0.2.15"
derive_more = "0.14.0"

log = "0.4.6"
env_logger = "0.6.1"

fxhash = "0.2.1"
petgraph = "0.4.13"

[dev-dependencies]
glob = "0.3.0"
matches = "0.1.8"
